# src/index.js
@@ -10,6 +10,7 @@ const ownedKitesRouter = require('./routes/ownedKites');
 const sessionsRouter = require('./routes/sessions');
 const locationsRouter = require('./routes/locations');
 const forecastsRouter = require('./routes/forecasts');
+const measurementsRouter = require('./routes/measurements');
 const errorHandler = require('./middleware/errorHandler');
 
 const app = express();
@@ -28,6 +29,7 @@ app.use('/api/owned-kites', ownedKitesRouter);
 app.use('/api/sessions', sessionsRouter);
 app.use('/api/locations', locationsRouter);
 app.use('/api/forecasts', forecastsRouter);
+app.use('/api/measurements', measurementsRouter);
 
 app.use(errorHandler);
 
